test/should-fail/vsgc4038sub.visage
/**
 * @subtest vsgc4038test.visage
 *
 *
 */
public var f=function(){vsgc4038test{}.func()}